src/objects/User_TimeSheet__c.object
<CustomObject>
    <fields>
        <fullName>Friday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Friday Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monday Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overhours_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overhours Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previously_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previously Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saturday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Saturday Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sunday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sunday Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thursday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Thursday Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSheet__c</fullName>
        <label>TimeSheet</label>
        <referenceTo>TimeSheet__c</referenceTo>
        <relationshipLabel>Users TimeSheets</relationshipLabel>
        <relationshipName>Users_TimeSheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tuesday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tuesday Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Comment__c</fullName>
        <label>User Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Users_TimeSheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wednesday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wednesday Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>User TimeSheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UTS-{00000000}</displayFormat>
        <label>User TimeSheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users TimeSheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Friday_Correctness</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Friday_Hours__c &gt; 0, NOT(TimeSheet__r.FridayIncluded__c),NOT(Overhours_Allowed__c)),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Friday is not available in current Timesheet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monday_Correctness</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Monday_Hours__c &gt; 0, NOT(TimeSheet__r.MondayIncluded__c),NOT(Overhours_Allowed__c)),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Monday is not available in current Timesheet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Saturday_Correctness</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Saturday_Hours__c &gt; 0, NOT(TimeSheet__r.SaturdayIncluded__c),NOT(Overhours_Allowed__c)),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Saturday is not available in current Timesheet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sunday_Correctness</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Sunday_Hours__c &gt; 0, NOT(TimeSheet__r.SundayIncluded__c),NOT(Overhours_Allowed__c)),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Sundayis not available in current Timesheet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Thursday_Correctness</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Thursday_Hours__c &gt; 0, NOT(TimeSheet__r.ThursdayIncluded__c),NOT(Overhours_Allowed__c)),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Thursday is not available in current Timesheet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tuesday_Correctness</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Tuesday_Hours__c &gt; 0, NOT(TimeSheet__r.TuesdayIncluded__c),NOT(Overhours_Allowed__c)),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Tuesday is not available in current Timesheet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Wednesday_Correctness</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Wednesday_Hours__c &gt; 0, NOT(TimeSheet__r.WednesdayIncluded__c),NOT(Overhours_Allowed__c)),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Wednesday is not available in current Timesheet.</errorMessage>
    </validationRules>
</CustomObject>